--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "npm start",
-    "start": "node app.js"
+    "start": "node app.js",
+    "deployH": "git add. && commit -m 'fix' && git push heroku master"
   },
   "author": "",
   "license": "ISC",
