--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "npm start",
     "start": "node app.js",
+    "depoly": "git add . && git commit -m 'fix' && git push heroku master"
   },
   "author": "",
   "license": "ISC",
