--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aimlinterpreter": "^0.1.7",
     "aimlparser": "^1.0.5",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
